garnt types
